--- a/gzhipin-rn/.babelrc
+++ b/gzhipin-rn/.babelrc
@@ -1,8 +1,11 @@
 {
-  "presets": ["babel-preset-expo"],
-  "env": {
-    "development": {
-      "plugins": ["transform-react-jsx-source"]
-    }
-  }
+  "presets": ["react-native","babel-preset-expo"],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "antd-mobile-rn"
+      }
+    ]
+  ]
 }
