--- a/gzhipin-rn/package.json
+++ b/gzhipin-rn/package.json
@@ -18,6 +18,8 @@
     "expo": "^30.0.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-socket.io-client": "^1.4.8",
+    "react-native-socketio": "^0.3.0",
     "react-navigation": "^2.16.0"
   },
   "devDependencies": {
